--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,11 @@
+body {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('img/backgroundd.jpg');
+    background-position: center;
+}
+
 .title {
     text-align: center;
-    font-size: 100px;
+    font-size: 48px;
     font-family: "Playwrite PL";
     font-weight: bold;
     color: white;
@@ -8,16 +13,16 @@
 
 .go {
     border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-    width: 100px;
-    border: 3px solid pink;
+    height: 100px;
+    width: 200px;
+    box-shadow: 2px;
+    font-size: 40px;
     font-family: "Quicksand";
 }
 
-body {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('img/background.jpg');
-    background-size: cover;
+button {
+    margin: -20px -50px; 
+    position:relative;
+    top:200px; 
+    left:38%;
 }
