--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,13 +16,25 @@ body {
     width: 200px;
     font-size: 40px;
     font-family: "Quicksand";
+    top: 200px;
+    left: 38%;
+}
+
+button.next {
+    border-radius: 10px;
+    height: 100px;
+    width: 200px;
+    font-size: 40px;
+    font-family: "Quicksand";
+    top: 300px;
+    left: 38%;
 }
 
 button {
     margin: -20px -50px; 
     position:relative;
     top:200px; 
-    left:38%;
+    left: 0;
 }
 
 .back {
@@ -30,17 +42,30 @@ button {
     top:18px; 
     left:53px;
     border-radius: 10px;
-    background-color: pink;
+    background-color: white;
     box-shadow: none;
     font-family: "Quicksand";
     height: 40px;
     width: 80px;
 }
 
-label.bill, .bill {
+.bill-1, .tip-1, .people-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+label.bill, .bill, .tip, .people {
     position: relative;
-    top: 100px;
-    left: 100px;
-    height: 40px;
-    width: 90px;
+    top: 25px;
+    left: auto;
+    font-family: "Playwrite NL", cursive;
+    font-size: 25px;
+    color: white;
+}
+
+input.text {
+    height: 80px;
+    border-radius: 10px;
+    box-shadow: none;
 }
